tried different colorcoding

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid one">
     <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light  ">
-      <div class="container-fluid">
+      <div class="container-fluid two">
         <a class="navbar-brand" href="#"><img src="images/cc logo transperent-fotor-2023082901444.png" width="60px"
             height=60px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -43,11 +43,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
-            <li class="nav-item">
+            <li id= "navigator" class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li id= "navigator" class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Services
@@ -61,10 +61,10 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
-            <li class="nav-item">
+            <li id= "navigator" class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
-            <li class="nav-item">
+            <li id= "navigator" class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
             <!-- <li class="nav-item">
@@ -76,6 +76,10 @@
       </div>
     </nav>
   </div>
+
+  <div class="divide">
+  </div>
+
   <!-- corousal -->
   <section id="carousel">
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -116,11 +120,18 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-</section>
-  <!-- services section -->
-  <section id="Services">
 
-    <div class="row" style="display:flex;align-items:flex-start;">
+  
+
+</section>
+
+<div class="divide">
+</div>
+
+  <!-- services section -->
+  <section id="services">
+
+    <div class="row" style="display:flex;align-items:flex-start">
       <h1>Our Services</h1>
       <div class="col-lg-3  col-md-6 parent parent">
 
@@ -177,13 +188,12 @@
         <img src="images/earth-removebg-preview.png" width="80px" height="80px">
         <p>Tailored solutions for sustainable industrial practices</p>  
       </div>
+ </div>
+</section>
 
+ <div class="divide">
+</div>
 
-
-    </div>
-
-
-  </section>
   <!-- why us -->
   <section id="whyus">
   <h1>Why Choose Us?</h1>
@@ -223,6 +233,9 @@
   </section>
   <!-- testimonials -->
   <section id="testimonials">
+
+    <div class="divide">
+    </div>
 
   </section>
   <!-- footer -->
