--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@
     <div class="row footimg" style="background-image: url(images/footerimg.jpg);">
       <div class="col-lg-4">
         <h1> Chanda </h1>
-        <br>
         <h1>Consultants</h1>
        </div>
      <div class="col-lg-4">
@@ -256,7 +255,7 @@
         Email: info@chandaconsultants.com
       </li>
       <li>
-        Address: PNP complex,Vijapur Village Himatnagar Dist ahemdabad Gujarat(IND) 452002  
+        Address: PNP complex,Vijapur Village Himatnagar, Ahmedabad, Gujarat(IND) 452002  
       </li>
      </ul>
      
